adding all with updated image

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 tickets.
               </p>
 
-              <a href="#" class="btn">
+              <a href="./register.html" class="btn">
                 <span class="span">Sign up Today</span>
 
                 <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
@@ -116,7 +116,7 @@
                 style="--width: 400; --height: 550"
               >
                 <img
-                  src="./images/hero-banner-1.jpg"
+                  src="./images/hero-1.jpg"
                   width="400"
                   height="550"
                   alt="view of assortment of decor for interior shop"
@@ -129,7 +129,7 @@
                 style="--width: 500; --height: 850"
               >
                 <img
-                  src="./images/hero-banner-2.jpg"
+                  src="./images/hero-2.jpg"
                   width="500"
                   height="850"
                   alt="ceramic craft ware"
@@ -158,7 +158,7 @@
                 style="--width: 600; --height: 480"
               >
                 <img
-                  src="./images/about-1.jpg"
+                  src="./images/hero-3.jpg"
                   width="600"
                   height="480"
                   loading="lazy"
@@ -175,7 +175,7 @@
               style="--width: 500; --height: 700"
             >
               <img
-                src="./images/about-2.jpg"
+                src="./images/hero-4.jpg"
                 width="500"
                 height="700"
                 loading="lazy"
@@ -203,7 +203,7 @@
                 style="--width: 850; --height: 420"
               >
                 <img
-                  src="./images/about-3.jpg"
+                  src="./images/hero-5.jpg"
                   width="850"
                   height="420"
                   loading="lazy"
@@ -236,7 +236,7 @@
                     style="--width: 500; --height: 550"
                   >
                     <img
-                      src="./images/collection-1.jpg"
+                      src="./images/my-7.jpg"
                       width="500"
                       height="550"
                       loading="lazy"
@@ -269,7 +269,7 @@
                     style="--width: 500; --height: 550"
                   >
                     <img
-                      src="./images/collection-2.jpg"
+                      src="./images/hero-6.jpg"
                       width="500"
                       height="550"
                       loading="lazy"
@@ -302,7 +302,7 @@
                     style="--width: 500; --height: 550"
                   >
                     <img
-                      src="./images/collection-3.jpg"
+                      src="./images/my-8.jpg"
                       width="500"
                       height="550"
                       loading="lazy"
@@ -485,7 +485,7 @@
             <li>
               <div
                 class="gallery-card has-bg-image has-after"
-                style="background-image: url('./images/gallery-1.jpg')"
+                style="background-image: url('./images/stedi-reward.jpg')"
               >
                 <div class="card-content">
                   <h3 class="h3 card-title">Stedi Rewards</h3>
@@ -505,7 +505,7 @@
             <li>
               <div
                 class="gallery-card has-bg-image has-after"
-                style="background-image: url('./images/gallery-2.jpg')"
+                style="background-image: url('./images/stedi-driver.jpg')"
               >
                 <div class="card-content">
                   <h3 class="h3 card-title">Stedi Drivers</h3>
@@ -525,7 +525,7 @@
             <li>
               <div
                 class="gallery-card has-bg-image has-after"
-                style="background-image: url('./images/gallery-3.jpg')"
+                style="background-image: url('./images/Sted-Team.png')"
               >
                 <div class="card-content">
                   <h3 class="h3 card-title">Stedi Team</h3>
@@ -545,7 +545,7 @@
             <li>
               <div
                 class="gallery-card has-bg-image has-after"
-                style="background-image: url('./images/gallery-4.jpg')"
+                style="background-image: url('./images/Stedi-speed.jpg')"
               >
                 <div class="card-content">
                   <h3 class="h3 card-title">Stedi Speed</h3>
